<resources>
    <string name="app_name">MoviesManager</string>
    <string name="add_movie">Add movie</string>
    <string name="movie_name">Movie name</string>
    <string name="_10_10">10/10</string>
    <string name="_1999">1999</string>
    <string name="genre">Genre</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="year">Year</string>
    <string name="duration">Duration</string>
    <string name="producer">Producer</string>
    <string name="watched">Watched</string>
    <string name="save">Save</string>
    <string name="_0_10">0/10</string>
    <string name="add_a_movie">Add a movie</string>
    <string name="rate_this_movie">Rate this movie</string>
    <string name="cancel">Cancel</string>
    <string name="rate">Rate</string>
    <string name="edit_genres">Edit Genres</string>
    <string name="add_genre">Add Genre</string>
    <string name="insert_a_new_genre">Insert a new genre</string>
    <string name="genre1">Genre</string>
    <string name="insert">Insert</string>
    <string name="delete_genre">Delete Genre</string>
    <string-array name="genreArray">
        <item>Horror</item>
        <item>Romance</item>
        <item>Sci-Fi</item>
        <item>Drama</item>
        <item>Thriller</item>
        <item>Animation</item>
        <item>Comedy</item>
    </string-array>
</resources>