<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/insert_a_new_genre"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/genreEt"
        android:hint="@string/genre1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/line"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <Button
            android:id="@+id/cancelBt"
            android:layout_margin="16dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:backgroundTint="@color/md_theme_light_error" />

        <Button
            android:layout_weight="1"
            android:id="@+id/insertBt"
            android:layout_margin="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/insert" />
    </LinearLayout>

</LinearLayout>