<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/md_theme_light_onTertiary"
    app:cardCornerRadius="6dp"
    app:cardElevation="2dp"
    app:cardMaxElevation="3dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_weight="6"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/nameTv"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_name"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/line"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@id/nameTv">

                    <TextView
                        android:id="@+id/yearTv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_1999"
                        android:layout_weight="1"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/genreTv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        android:layout_weight="1"
                        android:gravity="center" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <CheckBox
                android:id="@+id/watchedCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:minWidth="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>